Bug 124740 - OOXML shape with handle and w and h attribute on path has wrong handle position
Summary: OOXML shape with handle and w and h attribute on path has wrong handle position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Regina Henschel
URL:
Whiteboard: target:6.3.0
Keywords: filter:pptx
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2019-04-14 21:12 UTC by Regina Henschel
Modified: 2019-04-24 20:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A user defined shape to see the wrong behavior (14.58 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-04-14 21:12 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-04-14 21:12:03 UTC
Created attachment 150750 [details]
A user defined shape to see the wrong behavior

Open attached document in PowerPoint. It has a shape with a custGeom, where the path has got w and h attribute, which defines a local coordinate system (a 'viewBox'). The shape has a handle. Drag it to verify that it works.

Open the document in LibreOffice. Notice, that the handle marker is not at the corner of the triangle. Drag the handle. The triangle changes as expected. Release the handle. Notice, that the handle is not shown where you have released it, but at a place left from it.

The reason is, that when LO gets the handle position from the shape, it applies the scaling again, which is needed for fitting the outer to the inner coordinate, although the value of the handle position is already scaled in case of OOXML-shapes.

The "cloudCallout" is the only shape from the preset, that uses a path coordinate system. But because of bug 115813 you cannot use it, for testing this bug.
Comment 1 Regina Henschel 2019-04-14 21:13:43 UTC
I'll work on it.
Comment 2 Regina Henschel 2019-04-16 16:28:57 UTC
I don't know, why it doesn't automatically show up here. It is fixed in https://cgit.freedesktop.org/libreoffice/core/commit/?id=f0d07c5b84300e508d49dfceb968cb6a0dae436c
Comment 3 Xisco Faulí 2019-04-17 14:38:56 UTC
(In reply to Regina Henschel from comment #2)
> I don't know, why it doesn't automatically show up here. It is fixed in
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=f0d07c5b84300e508d49dfceb968cb6a0dae436c

Yep, that's weird. Probably Bugzilla was inaccessible at that time...
Comment 4 Regina Henschel 2019-04-24 20:37:16 UTC
Fixed in Version: 6.3.0.0.alpha0+
Build ID: 951282a27a9dd4c64fc206fcbdd805b4cb602816
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded