tdf#124740 Handle position is already scaled for ooxml-foo shapes

If a 'ooxml-foo' shape has a path internal coordinate system by
using w and h attribute, the position of the handle was out of
place. Because in 'ooxml-foo' shapes the handle position is not
directly connected to the adjustment value but via formulas, the
handle position is already scaled when calculating the position.

Change-Id: I84ef8c5ea3bbe94a1bfd9d8ba17b97248086234f